syntax = "proto3";

package esp4g.ping;

message Ping {
  int64 x = 1;
}

message Pong {
  int64 y = 1;
}

service PingService {
  rpc Send(Ping) returns (Pong) {}

  rpc Unavailable(Ping) returns (Pong) {}
}
